<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.1</version>
    </parent>

    <artifactId>iot-main</artifactId>
    <groupId>com.oberasoftware</groupId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <jasdb.version>2.0-SNAPSHOT</jasdb.version>
        <java.version>21</java.version>
        <jssc.version>2.9.5</jssc.version>
        <guava.version>33.2.1-jre</guava.version>

        <compiler.plugin.version>3.11.0</compiler.plugin.version>
        <javadoc.plugin.version>3.6.0</javadoc.plugin.version>
        <source.plugin.version>3.3.0</source.plugin.version>
        <jar.plugin.version>3.3.0</jar.plugin.version>
    </properties>

    <modules>
        <module>robotics/robo-core</module>
        <module>robotics/dynamixel-core</module>
        <module>robotics/dynamixel-web</module>
        <module>robotics/robo-container</module>
        <module>robotics/robo-behaviours</module>
        <module>robotics/robo-pi4j</module>
        <module>robotics/robo-web</module>
        <module>robot-models/robo-hexapod</module>
        <module>robot-models/robo-handcontroller</module>
        <module>robot-models/robo-maximus</module>
        <module>robot-models/robo-rover</module>
        <module>trainautomation/roco-z21-adapter</module>
        <module>trainautomation/train-service</module>
        <module>trainautomation/integrated-service</module>
        <module>iot-base/iot-core</module>
        <module>iot-base/iot-mqtt</module>
        <module>iot-base/home-rules</module>
        <module>iot-base/iot-ui</module>
        <module>iot-base/home-storage</module>
        <module>iot-base/iot-client</module>
        <module>iot-agent/agent-core</module>
        <module>integrations/home-hue</module>
        <module>integrations/home-youless</module>
        <module>integrations/home-shelly</module>
        <module>backend/queue-connectors</module>
        <module>backend/command-svc</module>
        <module>backend/edge-svc</module>
        <module>backend/state-svc</module>
        <module>backend/thing-svc</module>
        <module>backend/influxdb-bridge-svc</module>
<!--        <module>robot-models/robo-nao</module>-->
    </modules>

    <licenses>
        <license>
            <name>MIT X11 license</name>
            <url>http://oberasoftware.github.io/jasdb/jasdb/license/</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Renze de Vries</name>
            <email>renze@oberasoftware.com</email>
            <organization>Oberasoftware</organization>
            <organizationUrl>http://www.oberasoftware.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:renarj/robo-max.git</connection>
        <developerConnection>scm:git:git@github.com:renarj/robo-max.git</developerConnection>
        <url>git@github.com:renarj/robo-max.git</url>
    </scm>

    <dependencyManagement>

        <dependencies>
            <!-- project deps -->
            <dependency>
                <groupId>com.oberasoftware</groupId>
                <artifactId>obera-base</artifactId>
                <version>3.0</version>
            </dependency>
            <dependency>
                <groupId>com.oberasoftware</groupId>
                <artifactId>jasdb-restclient</artifactId>
                <version>${jasdb.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oberasoftware</groupId>
                <artifactId>jasdb_entity</artifactId>
                <version>${jasdb.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oberasoftware</groupId>
                <artifactId>jasdb-service</artifactId>
                <version>${jasdb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.paho</groupId>
                <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
                <version>1.2.5</version>
            </dependency>
            <dependency>
                <groupId>io.github.java-native</groupId>
                <artifactId>jssc</artifactId>
                <version>${jssc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.moquette</groupId>
                <artifactId>moquette-broker</artifactId>
                <version>0.8</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <ReleaseVersion>${project.version}</ReleaseVersion>
                            <!--suppress UnresolvedMavenProperty -->
                            <BuildNumber>${BUILD_NUMBER}</BuildNumber>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${javadoc.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${source.plugin.version}</version>
                    <configuration>
                        <attach>true</attach>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${jar.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
